pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/gateway-listener-different-hostnames-specific.routes.golden.yaml
resources:
- name: sample-gateway:HTTP:8080
  resource:
    '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    ignorePortInHostMatching: true
    name: sample-gateway:HTTP:8080
    requestHeadersToRemove:
    - x-kuma-tags
    validateClusters: false
    virtualHosts:
    - domains:
      - other.dev
      name: other.dev
      routes:
      - match:
          path: /to-other-dev
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-a285094d9b0d7032
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /to-other-dev/
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-a285094d9b0d7032
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
    - domains:
      - go.dev
      name: go.dev
      routes:
      - match:
          path: /to-go-dev
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-ed49e74a1f66b25c
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /to-go-dev/
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-ed49e74a1f66b25c
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
- name: sample-gateway:HTTP:8081
  resource:
    '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    ignorePortInHostMatching: true
    name: sample-gateway:HTTP:8081
    requestHeadersToRemove:
    - x-kuma-tags
    validateClusters: false
    virtualHosts:
    - domains:
      - '*.dev'
      name: '*.dev'
      routes:
      - match:
          path: /wild-dev
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-6d0a1cf7605e8b1e
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /wild-dev/
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-6d0a1cf7605e8b1e
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
- name: sample-gateway:HTTP:8082
  resource:
    '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    ignorePortInHostMatching: true
    name: sample-gateway:HTTP:8082
    requestHeadersToRemove:
    - x-kuma-tags
    validateClusters: false
    virtualHosts:
    - domains:
      - '*.dev'
      name: '*.dev'
      routes:
      - match:
          path: /same-path
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-wild-aac0221a73d6116a
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          path: /same-path
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-wild-dev-52ee11d917faac3e
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /same-path/
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-wild-aac0221a73d6116a
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /same-path/
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-wild-dev-52ee11d917faac3e
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
    - domains:
      - '*'
      name: '*'
      routes:
      - match:
          path: /same-path
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-wild-aac0221a73d6116a
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /same-path/
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: backend-wild-aac0221a73d6116a
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
